ddetect (0.98) UNRELEASED; urgency=low

  * Per Olofsson
    - Only ask whether PCMCIA should be started once. Closes: #250285.
    - Install /etc/pcmcia/config.opts using prebaseconfig.

 -- Per Olofsson <pelle@dsv.su.se>  Mon, 24 May 2004 21:58:05 +0200

ddetect (0.97) unstable; urgency=low

  * Per Olofsson
    - Added question about PCMCIA resource range options.
  * Joshua Kwan
    - Refine our PCMCIA heuristic on 2.6 by checking for the existence of
      any directories in /sys/class/pcmcia_socket. Thanks Russell King
      <rmk+pcmcia@arm.linux.org.uk>.
    - Try hard to only apt-install pcmcia-cs and generate PCMCIA devnames
      once.
  * Bastian Blank
    - hw-detect-full enhanced hw-detect.
  * Joey Hess
    - Ignore errors loading the ide-cd module, which can happen
      on at least sun hardware if the system has no IDE CD drive.
      Closes: #250324
  * Updated translations:
    - Bulgarian (bg.po) by Ognyan Kulev
    - Catalan (ca.po) by Jordi Mallach
    - Czech (cs.po) by Miroslav Kure
    - Danish (da.po) by Claus Hindsgaul
    - German (de.po) by Alwin Meschede
    - Spanish (es.po) by Javier Fernández-Sanguino
    - Basque (eu.po) by Piarres Beobide Egaña
    - Finnish (fi.po) by Tapio Lehtonen
    - French (fr.po) by Christian Perrier
    - Gallegan (gl.po) by Héctor Fernández López
    - Hungarian (hu.po) by VERÓK István
    - Indonesian (id.po) by Parlin Imanuel Toh
    - Italian (it.po) by Giuseppe Sacco
    - Japanese (ja.po) by Kenshi Muto
    - Lithuanian (lt.po) by Kęstutis Biliūnas
    - Norwegian (nb.po) by Knut Yrvin
    - Dutch (nl.po) by Bart Cornelis
    - Norwegian (nn.po) by Håvard Korsvoll
    - Polish (pl.po) by Bartosz Fenski
    - Portuguese (Brazil) (pt_BR.po) by André Luís Lopes
    - Romanian (ro.po) by Eddy Petrisor
    - Russian (ru.po) by Yuri Kozlov
    - Slovak (sk.po) by Peter KLFMANiK Mann
    - Slovenian (sl.po) by Jure Čuhalev
    - Turkish (tr.po) by Osman Yüksel